--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "wensco-pin-server",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "googleapis": "^133.0.0"
+    "google-auth-library": "^9.0.0",
+    "google-spreadsheet": "^4.3.0"
   }
 }
